Spacing fixed.

--- a/CSS/base.css
+++ b/CSS/base.css
@@ -6,7 +6,6 @@ header {
  text-align:center;   
     max-width:800px;
     margin-top:0px;
-    border:1px solid red;
 }
 
 h1, h2, h3, h4, h5{
@@ -28,6 +27,7 @@ h2{
     font-size: 40px;
     color: #000000;
     margin-left:20%;
+    margin-top:15px:
 
 }
 
@@ -37,12 +37,13 @@ h3{
 
 h4{
     font-size: 20px;
-    
+    margin-top: 20px;
 }
 
 h5{
  margin-left:20%;   
 }
+
 
 
 /*----- Cannot get the h6 to not turn white once clicked upon----*/
@@ -70,7 +71,7 @@ nav {
     float:left;
     font-family:helvetica;
 }
-nav a:link, a:visited {
+nav a:link, nav a:visited {
 	border-radius: 50%;
   	width: 100px;
   	height: 100px; 
@@ -104,7 +105,7 @@ article{
     
 }
 
-body > P { line-height: 1.3}
+body > p { line-height: 1.3;}
 
 body{
    
@@ -112,7 +113,8 @@ body{
 
 p{  
     font-size: 16px;
-    line-height: 24px;
+    line-height: 30px;
+    margin-bottom: 16px;
 }
 
 img{
@@ -124,7 +126,9 @@ img{
 ul{
     list-style-type:none;
 }
-
+li{
+    margin-bottom:15px;
+}
 aside {
     background-color: #000;
     float:right;
@@ -158,8 +162,11 @@ footer img{
  width:5%;   
 }
 
+/* page-specfiic overrides */
 
-
+.index header {
+    margin-bottom: 40px;
+}
 
 
 
